syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "KeymanagerGrpc";
option objc_class_prefix = "HLW";

package br.com.zup;

import "google/protobuf/empty.proto";

service KeymanagerCadastraGrpcService {
  rpc cadastro (CadastroPixRequest) returns (CadastroPixResponse) {}
}

service KeymanagerDeletaGrpcService {
  rpc deleta (DeletaPixRequest) returns (google.protobuf.Empty) {}
}

message ValidationErrors {
  repeated string message = 1;
}

enum TipoDeChave {
  TIPO_CHAVE_DESCONHECIDO = 0;
  CPF = 1;
  TELEFONE = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TipoDeConta {
  TIPO_CONTA_DESCONHECIDO = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message CadastroPixRequest {
  string idTitular = 1;
  TipoDeChave tipoDeChave = 2;
  string valor = 3;
  TipoDeConta tipoDeConta = 4;
}

message CadastroPixResponse {
  string pixId = 1;
}

message DeletaPixRequest {
  string pixId = 1;
  string clienteId = 2;
}